# Airflow-dataCrawling-pipeline

./: .gitignore  README.md  pyproject.toml  setup_docker.sh
dags/: crack_crawling.py
sql/: create_tables.sql
src/crack/: __init__.py  create_tables.py  main.py
src/crack/database/: __init__.py  connection.py
src/crack/model/: Category.py  Character.py  Collection.py  CollectionCharacter.py
src/crack/pipeline/: run_pipeline.py
src/crack/repository/: category_repository.py  character_repository.py  collection_character_repository.py  collection_repository.py
src/crack/service/: character_crawler.py  navigation_crawler.py
src/crack/utils/: data_processor.py  http_response.py
